k8s/istio/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: httpbin-tls-origination
  namespace: istio-test
spec:
  host: httpbin.org
  trafficPolicy:
    tls:
      mode: SIMPLE
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: jsonplaceholder-tls-origination
  namespace: istio-test
spec:
  host: jsonplaceholder.typicode.com
  trafficPolicy:
    tls:
      mode: SIMPLE
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: facebook-graph-tls-origination
  namespace: istio-test
spec:
  host: graph.facebook.com
  trafficPolicy:
    tls:
      mode: SIMPLE
